--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
 body {
     text-align: center;
+    background-color: #fcfcfc;
+}
+
+.score {
+  font-family: 'Helvetica', sans-serif;
+  max-width: 505px;
+  margin: 0 auto;
+  box-shadow: 0 0 5px rgba(51, 51, 51, 0.5);
+  margin-top: 2em;
+  padding: 1em;
+  border-radius: 1em;
+  background: #fcfcfc; /* Old browsers */
+  background: -moz-linear-gradient(top,  #fcfcfc 0%, #f2f2f2 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #fcfcfc 0%,#f2f2f2 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #fcfcfc 0%,#f2f2f2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
